--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3'
 services:
   web:
     build: .
-    command: uvicorn app:app --host 0.0.0.0
+    command: uvicorn app:app --reload
     volumes:
       - .:/app
     ports:
